--- a/Symulacja Fal/Symulacja Fal.vcxproj.filters
+++ b/Symulacja Fal/Symulacja Fal.vcxproj.filters
@@ -901,5 +901,8 @@
     <Image Include="res\textures\test.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\textures\test2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
